Basic info alignment fixed

--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -94,6 +94,7 @@
         @media screen and (max-width: $screen-xs) {
             font-size: $font-size-small;
             margin-left: 16px;
+            margin-top: 3px;
             height: 36px;
         }
     };
@@ -103,6 +104,13 @@
         display: flex;
         justify-content: space-between;
         font-size: $font-size-medium;
+
+        &_s {
+            @media screen and (min-width: $screen-xs) {
+                flex-direction: column;
+                min-height: 62px;
+            }
+        }
 
         @media screen and (max-width: $screen-xs) {
             font-size: $font-size-tiny;
@@ -166,6 +174,10 @@
     &__last-element {
         padding-top: 20px;
         margin: auto 0 0;
+
+        @media screen and (max-width: $screen-xs) {
+            padding-top: 16px;
+        }
     }
 
     &__image-container {
